News UAT/force-app/main/default/objects/Payment__c/fields/Advertiser_Account_Adpoint_ID__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account_Adpoint_ID__c</fullName>
    <label>Advertiser Account Adpoint ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>