News UAT/force-app/main/default/objects/Payment__c/fields/Cancellation_Period__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Period__c</fullName>
    <formula>ROUND(((Cancelled_Date__c - Start_Date__c) / 30.43684908333333),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>