News UAT/force-app/main/default/objects/Payment__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change in Business</fullName>
            </value>
            <value>
                <fullName>Client perceived ROI</fullName>
            </value>
            <value>
                <fullName>Customer Service Issue</fullName>
            </value>
            <value>
                <fullName>Moving to Another Provider (specify below)</fullName>
            </value>
            <value>
                <fullName>Package Adjustment</fullName>
            </value>
            <value>
                <fullName>Seasonal Campaign booked as Evergreen</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Downsell</fullName>
            </value>
            <value>
                <fullName>Financial Difficulty</fullName>
            </value>
            <value>
                <fullName>Achieved Desired Outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>