News UAT/force-app/main/default/objects/Payment__c/fields/Cancellation_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_Notes__c</fullName>
    <label>Cancellation Reason Notes</label>
    <type>TextArea</type>
</CustomField>