News UAT/force-app/main/default/objects/Payment__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <description>Date the campaign has been cancelled</description>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>