News UAT/force-app/main/default/objects/Payment__c/fields/Date_of_Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Payment__c</fullName>
    <description>Timestamp of the last transaction to ESB/JDE</description>
    <label>Date of Last Payment</label>
    <type>Date</type>
</CustomField>