News UAT/force-app/main/default/objects/Payment__c/fields/JDE_Publication_Code__c.field-meta.xml
<CustomField>
    <fullName>JDE_Publication_Code__c</fullName>
    <label>JDE Publication Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>