News UAT/force-app/main/default/objects/Payment__c/fields/Last_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_End_Date__c</fullName>
    <label>Last End Date</label>
    <type>Date</type>
</CustomField>