News UAT/force-app/main/default/objects/Payment__c/fields/Last_Scheduled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled_End_Date__c</fullName>
    <description>Populated when latest Payment Schedule status = scheduled. Used to determine if there is an overpayment and needs to be refunded.</description>
    <label>Last Scheduled End Date</label>
    <type>Date</type>
</CustomField>