News UAT/force-app/main/default/objects/Payment__c/fields/Last_Scheduled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled_Start_Date__c</fullName>
    <label>Last Scheduled Start Date</label>
    <type>Date</type>
</CustomField>