News UAT/force-app/main/default/objects/Payment__c/fields/Minimum_Evergreen_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Evergreen_Cancellation_Date__c</fullName>
    <description>Date before which an evergreen contract cannot be cancelled</description>
    <label>Minimum Evergreen Cancellation Date</label>
    <type>Date</type>
</CustomField>