News UAT/force-app/main/default/objects/Payment__c/fields/Minimum_Evergreen_Cancellation_Period__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Evergreen_Cancellation_Period__c</fullName>
    <description>Minimum number of months in which the payment associated to the Product Node cannot be canceled</description>
    <inlineHelpText>Minimum number of months in which the payment associated to the Product Node cannot be canceled</inlineHelpText>
    <label>Minimum Evergreen Cancellation Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>