News UAT/force-app/main/default/objects/Payment__c/fields/Number_of_Pending_PS__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pending_PS__c</fullName>
    <label>Number of Pending PS</label>
    <summaryFilterItems>
        <field>Payment_Schedule__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Schedule__c.Payment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>