News UAT/force-app/main/default/objects/Payment__c/fields/Override_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Override_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Cancellation</label>
    <type>Checkbox</type>
</CustomField>