News UAT/force-app/main/default/objects/Payment__c/fields/Payer_Account_Adpoint_ID__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account_Adpoint_ID__c</fullName>
    <label>Payer Account Adpoint ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>