News UAT/force-app/main/default/objects/Payment__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF(ISBLANK(End_Date__c),
    &#39;In Progress&#39;,
    IF( End_Date__c &gt; TODAY(),
      IF(ISBLANK(Cancelled_Date__c), &#39;In Progress&#39; ,&#39;Pending Cancellation&#39;),
      IF(ISBLANK(Cancelled_Date__c), &#39;Campaign Ended&#39; ,&#39;Cancelled&#39;)
      )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>