News UAT/force-app/main/default/objects/Payment__c/fields/Previous_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_End_Date__c</fullName>
    <description>The old end date before the payment gets revised.</description>
    <inlineHelpText>The old end date before the payment gets revised.</inlineHelpText>
    <label>Previous End Date</label>
    <type>Date</type>
</CustomField>