News UAT/force-app/main/default/objects/Payment__c/fields/Previous_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Start_Date__c</fullName>
    <description>The old start date before the payment gets revised</description>
    <inlineHelpText>The old start date before the payment gets revised</inlineHelpText>
    <label>Previous Start Date</label>
    <type>Date</type>
</CustomField>