News UAT/force-app/main/default/objects/Payment__c/fields/Primary_Contact_on_SO__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_on_SO__c</fullName>
    <label>Primary Contact on SO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>