News UAT/force-app/main/default/objects/Payment__c/fields/Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Date__c</fullName>
    <description>When the payment start date and end date get revised</description>
    <inlineHelpText>When the payment start date and end date get revised</inlineHelpText>
    <label>Revision Date</label>
    <type>Date</type>
</CustomField>