News UAT/force-app/main/default/objects/Payment__c/fields/TM1_Code__c.field-meta.xml
<CustomField>
    <fullName>TM1_Code__c</fullName>
    <formula>LEFT(TRIM(TM1_Publication__c), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM1 Code</label>
    <type>Text</type>
</CustomField>