News UAT/force-app/main/default/objects/Payment__c/fields/TM1_Description__c.field-meta.xml
<CustomField>
    <fullName>TM1_Description__c</fullName>
    <formula>RIGHT(TRIM(TM1_Publication__c),LEN(TRIM(TM1_Publication__c))-6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM1 Description</label>
    <type>Text</type>
</CustomField>