News UAT/force-app/main/default/objects/Payment__c/fields/TM1_Publication__c.field-meta.xml
<CustomField>
    <fullName>TM1_Publication__c</fullName>
    <label>TM1 Publication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>