News UAT/force-app/main/default/objects/Payment__c/fields/Total_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Total_Scheduled__c</fullName>
    <label>Total Scheduled</label>
    <summarizedField>Payment_Schedule__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Schedule__c.Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Schedule__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>