News UAT/force-app/main/default/objects/Payment__c/validationRules/Cancelled_Date_Not_Less_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Date_Not_Less_Than_Today</fullName>
    <active>true</active>
    <description>When a cancellation date is entered, it cannot be less than today&#39;s date.</description>
    <errorConditionFormula>AND(ISNULL( PRIORVALUE(Cancelled_Date__c) ),
				NOT(ISNULL( Cancelled_Date__c )),
				Cancelled_Date__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>Cancelled_Date__c</errorDisplayField>
    <errorMessage>Cancellation Date cannot be less than today&#39;s date</errorMessage>
</ValidationRule>