News UAT/force-app/main/default/objects/Payment__c/validationRules/Cannot_Modify_After_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Modify_After_Cancelled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   ISPICKVAL(Status__c, &#39;Cancelled&#39;) , ISCHANGED( End_Date__c ))</errorConditionFormula>
    <errorMessage>Cannot change end date if a campaign is cancelled.</errorMessage>
</ValidationRule>