News UAT/force-app/main/default/objects/Payment__c/validationRules/End_Date_cannot_be_in_the_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_cannot_be_in_the_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(End_Date__c),(End_Date__c &lt; TODAY()),(End_Date__c&lt;Start_Date__c))</errorConditionFormula>
    <errorMessage>End Date cannot be in the past.</errorMessage>
</ValidationRule>