News UAT/force-app/main/default/objects/Payment__c/validationRules/Must_Add_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Add_Cancellation_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(TEXT(Cancellation_Reason__c) ),  NOT(ISBLANK( End_Date__c ))  )</errorConditionFormula>
    <errorMessage>Please add cancellation reason when cancelling the campaign.</errorMessage>
</ValidationRule>