News UAT/force-app/main/default/objects/Payment__c/validationRules/No_Override_Cancellation_Validations.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Override_Cancellation_Validations</fullName>
    <active>true</active>
    <description>End Date cannot be less than x days from Today</description>
    <errorConditionFormula>AND( ISCHANGED(End_Date__c),  Override_Cancellation__c=False, End_Date__c&lt;( TODAY() + VALUE( $Label.Minimum_Cancellation_Notice) ))</errorConditionFormula>
    <errorMessage>End date cannot be less than the minimum cancellation notice if not overridden.</errorMessage>
</ValidationRule>