News UAT/force-app/main/default/objects/Payment__c/validationRules/No_Override_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Override_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT( ISNEW() ), 
NOT( Order__r.Evergreen__c ), 
TEXT((PRIORVALUE( End_Date__c )))&lt;&gt;&quot;&quot;, 
ISCHANGED( End_Date__c ), 
ISBLANK(End_Date__c ) 
)</errorConditionFormula>
    <errorMessage>End Date cannot be blank again</errorMessage>
</ValidationRule>